tests/baselines/reference/commaOperatorInvalidAssignmentType.errors.txt
==== tests/cases/compiler/commaOperatorInvalidAssignmentType.ts (6 errors) ====
    var BOOLEAN: boolean;
    var NUMBER: number;
    var STRING: string;
    
    var resultIsBoolean: boolean
    var resultIsNumber: number
    var resultIsString: string
    
    //Expect errors when the results type is different form the second operand
    resultIsBoolean = (BOOLEAN, STRING);
    ~~~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'string' to 'boolean'.
    resultIsBoolean = (BOOLEAN, NUMBER);
    ~~~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'number' to 'boolean'.
    
    resultIsNumber = (NUMBER, BOOLEAN);
    ~~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'boolean' to 'number'.
    resultIsNumber = (NUMBER, STRING);
    ~~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'string' to 'number'.
    
    resultIsString = (STRING, BOOLEAN);
    ~~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'boolean' to 'string'.
    resultIsString = (STRING, NUMBER);
    ~~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'number' to 'string'.
    